--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "awd-configuration-console",
   "version": "0.1.0",
   "dependencies": {
+    "axios": "^0.16.2",
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-transition-group": "^1.2.0",
-    "reactstrap": "^4.6.2"
+    "reactstrap": "^4.6.2",
+    "redux": "^3.7.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
