--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-addons-css-transition-group": "^15.5.2",
     "react-addons-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
+    "react-modal": "^2.2.1",
+    "react-native-web": "0.0.108",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-transition-group": "^1.2.0",
