--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "."
+  "homepage": ".",
+  "proxy": "http://localhost:8000"
 }
